# triangle

./: .gitignore  CMakeLists.txt  README.md
shaders/: box.fs  box.vs  grass.fs  light.fs  light.vs  model.fs  model.vs  triangle.fs  triangle.vs
src/: IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  Model.hpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  VertexLayout.cpp  global.hpp
src/core/: cube.cpp  grass.cpp  light.cpp  model.cpp
src/debug/: debug.hpp
src/utils/: Camera.cpp  Camera.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexLayout.cpp  VertexLayout.hpp
